@@ -26,7 +26,6 @@ import (
 	"launchpad.net/hockeypuck/mgo"
 	"net/http"
 	"os"
-	"strings"
 )
 
 var mgoServer *string = flag.String("server", "localhost", "mongo server")
@@ -66,8 +65,7 @@ func main() {
 	connect := ConnectString()
 	for i := 0; i < *NumWorkers; i++ {
 		worker := &mgo.MgoWorker{Connect: connect,
-			PksSender: hockeypuck.PksSender{
-				PksAddrs: strings.Split(*PksSync, ",")},
+			PksSender: hockeypuck.PksSender{},
 			WorkerBase: hockeypuck.WorkerBase{L: log}}
 		err = worker.Init()
 		if err != nil {
